--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <header>แบบฟอร์มการสมัครสมาชิกห้องสมุด</header>
+    <header>Library membership application form</header>
     
 </body>
 </html>
