Edit2 content and decorate form

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <form>
         <fieldset>
-            <legend>สมัครสมาชิก</legend>
+            <legend>สมัครสมาชิก</legend><br>
             <div>
                 <label for="thainame">ชื่อ - นามสกุล: <b>*</b></label><br>
                 <input type="text" id="thainame" name="thainame" size="50px" placeholder="กรอกชื่อ-นามสกุล(ภาษาไทย)" required><br><br>
@@ -74,8 +74,8 @@
                     <option value="อื่นๆ">อื่นๆ</option>
                 </select>
                 <label><b>*</b></label><br><br>
-                <input type="checkbox" id="agee" value="agee" required>
-                <label for="agee">ต้องการรับรู้ข่าวสารทางอีเมลหรือไม่ ?</label><br><br>
+                <input type="checkbox" id="agree" value="agree" checked>
+                <label for="argee">ต้องการรับรู้ข่าวสารทางอีเมลหรือไม่ ?</label><br><br>
                 <input type="submit" value="สมัคร">
             </div>
         
